Actualizamos el archivo daily y el retro con sus respectivas modificaciones

--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -6,7 +6,10 @@
 <body>
     <%- include("./partials/header")%>
 
-   
+    <h2>ERROR 404! PÁGINA NO ENCONTRADA
+    </h2>
+    <br>   <br>  
+
     <%- include("./partials/footer")%>
 
 </body>
