--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -20,7 +20,7 @@
             </div>
             <article class="producto">
                 <img src="/images/products/new-balance3.png" alt="NEW BALANCE 997" class="miniatura">
-                <div class="modelo">NEW BALANCE 997 SPORT CHINESE N.Y / TALLE 36</div>
+                <div class="modelo">New Balance 997 Sport Chinese New Year (2020) / Talle 36</div>
                 <div class="precio-carrito">PRECIO $15.799</div>
                 <form action="/productCart" method="GET" class="form-cantidad">
                     <label for="cantidad">u.</label>
@@ -38,7 +38,7 @@
             </article>
             <article class="producto">
                 <img src="/images/products/vans1.png" alt="vans old skool" class="miniatura">
-                <div class="modelo">VANS OLD SKOOL BLACK WHITE / TALLE 40</div>
+                <div class="modelo">Vans Old Skool Black White / Talle 40</div>
                 <div class="precio-carrito">PRECIO $11.200</div>
                 <form action="/productCart" method="GET" class="form-cantidad">
                     <label for="cantidad">u.</label>
