--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -7,9 +7,9 @@
                 <h4 class="titulo">INSTITUCIONAL<i class="fas fa-chevron-down none3"></i></h4>
                 <div class="italic center padding">
                     <ul class="footer">
-                        <li><a href="#" class="linkfooter">Quienes somos</a></li>
-                        <li><a href="#" class="linkfooter">Politicas de privacidad</a></li>
-                        <li><a href="#" class="linkfooter">Terminos y condiciones</a></li>
+                        <li><a href="/products" class="linkfooter">Quienes somos</a></li>
+                        <li><a href="/products" class="linkfooter">Politicas de privacidad</a></li>
+                        <li><a href="/products" class="linkfooter">Terminos y condiciones</a></li>
                     </ul>
                 </div>
             </article>
@@ -17,11 +17,11 @@
                 <h4 class="titulo">AYUDA<i class="fas fa-chevron-down none3"></i></h4>
                 <div class="italic center padding">
                     <ul class="footer">
-                        <li><a href="#" class="linkfooter">Preguntas frecuentes</a></li>
-                        <li><a href="#" class="linkfooter">Sucursales</a></li>
-                        <li><a href="#" class="linkfooter">Pagos</a></li>
-                        <li><a href="#" class="linkfooter">Entregas</a></li>
-                        <li><a href="#" class="linkfooter">Cambios</a></li>
+                        <li><a href="/products" class="linkfooter">Preguntas frecuentes</a></li>
+                        <li><a href="/products" class="linkfooter">Sucursales</a></li>
+                        <li><a href="/products" class="linkfooter">Pagos</a></li>
+                        <li><a href="/products" class="linkfooter">Entregas</a></li>
+                        <li><a href="/products" class="linkfooter">Cambios</a></li>
                     </ul>
                 </div>
             </article>
@@ -29,9 +29,10 @@
                 <h4 class="titulo">CONTACTO<i class="fas fa-chevron-down icon-title none3"></i></h4>
                 <div class="italic">
                     <ul class="footer">
-                        <li><a href="" class="linkfooter">0800-888-8888</a></li>
-                        <li><a href="" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
-                        <li><a href="#" class="linkfooter"><i class="far fa-envelope "></i>Envianos un mensaje</a>
+                        <li><a href="/products" class="linkfooter">0800-888-8888</a></li>
+                        <li><a href="/products" class="linkfooter">Lunes a Sábado de 9 a 18 hs</a></li>
+                        <li><a href="/products" class="linkfooter"><i class="far fa-envelope "></i>Envianos un
+                                mensaje</a>
                         </li>
                     </ul>
                 </div>
