--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -21,11 +21,11 @@
 
         <nav class="header-bottom-bar">
             <ul>
-                <li><a href="#" class="linknav">HOMBRE</a></li>
-                <li><a href="#" class="linknav">MUJER</a></li>
-                <li><a href="#" class="linknav">NIÑO</a></li>
-                <li><a href="#" class="linknav">DEPORTES</a></li>
-                <li><a href="#" class="linknav">MARCAS</a></li>
+                <li><a href="/products/productsMan" class="linknav">HOMBRE</a></li>
+                <li><a href="/products/productsWoman" class="linknav">MUJER</a></li>
+                <li><a href="/products/productsKids" class="linknav">NIÑO</a></li>
+                <li><a href="/products/productsSport" class="linknav">DEPORTES</a></li>
+                <li><a href="/products/productsMarks" class="linknav">MARCAS</a></li>
             </ul>
 
         </nav>
