Agrego distintas vistas de los productos y las vinculo en el index

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="/products/productsMan" class="linknav">HOMBRE</a></li>
                 <li><a href="/products/productsWoman" class="linknav">MUJER</a></li>
-                <li><a href="/products/productsKids" class="linknav">NIÑO</a></li>
+                <li><a href="/products/productsKids" class="linknav">NIÑOS</a></li>
                 <li><a href="/products/productsSport" class="linknav">DEPORTES</a></li>
                 <li><a href="/products/productsMarks" class="linknav">MARCAS</a></li>
             </ul>
