--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -12,15 +12,16 @@
             <form action="/users/login" method="POST" class="form">
                 <div class="register-formulario">
                     <label for="user" class="obligatorio">* Email</label>
-                    <input type="email" name="email" id="user" placeholder="Email..." required class="control-login" />
+                    <input type="text" name="email" id="user" placeholder="Email..." class="control-login"
+                        value=<%= locals.old && old.email? old.email:null  %>>
                     <% if (locals.errors && errors.email) { %>
-                      <p class="alert"><%=errors.email.msg%></p> 
-                     
+                    <p class="alert"><%=errors.email.msg%></p>
+
                     <% } %>
                 </div>
                 <div class="register-formulario">
                     <label for="password" class="obligatorio">* Contraseña</label>
-                    <input type="password" name="password" id="password" placeholder="Contraseña..." required
+                    <input type="password" name="password" id="password" placeholder="Contraseña..."
                         class="control-login" />
                 </div>
                 <div class="register-formulario center">
