--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -93,7 +93,7 @@
             <div class="control-formulario1">
                 <label for="discount">Descuento:</label>
                 <input type="number" name="discount" value="<%=producto.discount%>" id="discount" placeholder="15"
-                    class="control1" required />
+                    class="control1" />
             </div>
             <br />
             <div class="register-buttons">
