--- a/src/views/products/productsKids.ejs
+++ b/src/views/products/productsKids.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <div class="encabezado-carrito">
-            <h3>CALZADO > NIÑOS</h3>
+            <h3>NIÑOS > CALZADO</h3>
 
         </div>
         <section class="elementos-carrito">
