--- a/src/views/products/productsMan.ejs
+++ b/src/views/products/productsMan.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <div class="encabezado-carrito">
-            <h3>CALZADO > HOMBRE</h3>
+            <h3>HOMBRE > CALZADO</h3>
 
         </div>
         <section class="elementos-carrito">
