--- a/src/views/products/productsWoman.ejs
+++ b/src/views/products/productsWoman.ejs
@@ -8,7 +8,7 @@
 
     <main>
         <div class="encabezado-carrito">
-            <h3>CALZADO > MUJER</h3>
+            <h3>MUJER > CALZADO</h3>
 
         </div>
         <section class="elementos-carrito">
