--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -11,9 +11,9 @@
             <ol class="nav-site">
                 <li><a href="/">Inicio</a></li>
                 <span>></span>
-                <li><a href=#>Hombres</a></li>
+                <li><a href="/products/productsMan">Hombres</a></li>
                 <span>></span>
-                <li><a href=#>Calzado</a></li>
+                <li><a href="/products">Calzado</a></li>
             </ol>
         </div>
 
@@ -28,7 +28,20 @@
             <div class="data-principal">
                 <div class="product-body">
                     <h2 class="main-title"><%=producto.name%></h2>
-                    <p class="precio-pd">$<%=toThousand(producto.price)%></p>
+                    <% if (producto.discount) { %>
+                    <p class="precio-pd small-detail">
+                        <span>$<%= toThousand(producto.price) %></span>
+                        /
+                        <b><%= producto.discount%>% OFF</b>
+                    </p>
+                    <p class="precio-pd">
+                        $<%= toThousand(producto.price - (producto.price*producto.discount/100)) %>
+                    </p>
+                    <% } else { %>
+                    <p class="precio-pd">
+                        $<%= toThousand(producto.price) %>
+                    </p>
+                    <% } %>
 
                     <h3 class="talle">Seleccioná tu talle</h3>
                     <div class="talle1">
@@ -56,7 +69,6 @@
                     </div>
                     <div class="realizar-compra">
                         <a href="productCart" class="boton-de-compra">Comprar <i class="fas fa-shopping-basket"></i></a>
-
                     </div>
 
                     <a href="/products/<%= producto.id %>/edit"><button type="button"
@@ -96,19 +108,25 @@
         <h3 class="margin-products">Otros productos que podrian interesarte...</h3>
         <section class="destacados">
 
-            <% for (product of products){ %>
-            <% if (product.category=="visited") { %>
+            <% for( let i = 0; i < products.length; i++ ) { %>
+
+            <%if (products[i].category =="visited") { 
+                        let finalPrice = products[i].discount ? (products[i].price - products[i].price * products[i].discount / 100 ).toFixed(0)  : products[i].price; %>
+            %>
             <article class="recomendado-article a1">
-                <a href="/products/<%= product.id %> "><img src="/images/products/<%= product.image %>"
-                        alt=<%= product.name %>></a>
+                <a href="/products/<%= products[i].id %> "><img src="/images/products/<%= products[i].image %>"
+                        alt=<%= products[i].name %>></a>
                 <div class="contenedor-descripcion">
-                    <div><%= product.name %></div>
-                    <i class="fas fa-arrow-circle-left izarrow"></i>
-                    <div class="precio-carrito">$ <%= toThousand(product.price) %></div>
-                    <i class="fas fa-arrow-circle-right derarrow"></i>
+                    <div><%= products[i].name %></div>
+                    <% if (products[i].discount) { %>
+                    <span class="small">$<%= toThousand(products[i].price) %></span> $<%= toThousand(finalPrice)  %>
+                    <p class="descuento"><%- products[i].discount ? `<span>${products[i].discount}% OFF</span>` : '' %>
+                    </p>
+                    <% } else { %>
+                    <div class="precio-carrito">$ <%= toThousand(products[i].price) %></div>
+                    <% } %>
                 </div>
             </article>
-
 
             <% } %>
 
