--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <script src="https://kit.fontawesome.com/e8df24fbbe.js" crossorigin="anonymous"></script>
     <link  rel="icon"   href="images/favicon.png" type="image/png" />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
+    <link rel="shortcut icon" href="images/faviconkicks.png" type="image/png" />
     <link rel="stylesheet" href="/css/styles.css">
 </head>
