Configuracion del .sequelizerc, y creacion de los modelos con sus asociaciones

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,7 @@ body{
     align-content: center;
     background-color: #222021  ;
     padding-top: 10px;
+    border-bottom: solid 10px #222020;
 }
 .arriba{
     background-color: #f2e4bb;
